combo: set word-break to avoid overlap when the option is a very long string dahsboard designer: refactor to functional component, make it easier to use. Still dirty though.

--- a/src/controls/combo.css
+++ b/src/controls/combo.css
@@ -19,3 +19,7 @@
 .ui.selection.multiple.dropdown>.dropdown.icon {
   padding-top: 0px;
 }
+
+.ui.selection.multiple.dropdown > .ui.label {
+  word-break: break-word;
+}
